--- a/package.json
+++ b/package.json
@@ -24,15 +24,11 @@
     ]
   },
   "dependencies": {
-    "bcrypt": "^5.0.1",
-    "body-parser": "^1.19.1",
-    "compression": "^1.7.4",
-    "cors": "^2.8.5",
-    "express": "^4.17.2",
+    "config": "^3.3.6",
+    "dotenv": "^10.0.0",
     "reflect-metadata": "^0.1.13"
   },
   "devDependencies": {
-    "@types/body-parser": "^1.19.2",
     "@types/express": "^4.17.13",
     "@types/node": "^17.0.8",
     "@typescript-eslint/eslint-plugin": "^5.9.0",
@@ -45,7 +41,7 @@
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-promise": "^6.0.0",
-    "husky": "^7.0.4",
+    "husky": "^7.0.0",
     "lint-staged": "^12.1.5",
     "nodemon": "^2.0.15",
     "prettier": "^2.5.1",
